# donate-protocol-portal

./: .env.example  AGENT_CHARITY_LINKING.md  AGENT_DASHBOARD_FEATURES.md  AGENT_WALKTHROUGH.md  APP_STRUCTURE.md  Anchor.toml  COMPLETION_REPORT.txt  DASHBOARD_BUILD_COMPLETE.md  DASHBOARD_GUIDE.md  DELIVERY_CHECKLIST.md  DEMO_README.md  DEPLOYMENT.md  DEPLOYMENT_READY.md  DEPLOY_NOW.sh  DEVELOPER_QUICK_START.md  DONATE_PROTOCOL_COMPLETE.md  Dockerfile  Dockerfile.bot  FIXES_AND_FEATURES.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_PRIVY.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  LAUNCH.sh  LAUNCH_GUIDE_COMPLETE.md  LAUNCH_READY.md  LIVE_DEPLOYMENT_SUMMARY.md  LIVE_WALLET.md  MARKETPLACE.md  PRIVATE_WALLET.md  PRIVY_DOCS_INDEX.md  PRIVY_INTEGRATION_GUIDE.md  PRIVY_INTEGRATION_SUMMARY.md  PRIVY_WALLET_LAUNCH.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README_LAUNCH.md  READY_FOR_LAUNCH.md  START_DASHBOARD.md  (+13 more)
app/: globals.css  layout.tsx  page.tsx
app/auth/: page.tsx
components/: dashboard-shell.tsx  donate-modal.tsx  live-donation-modal.tsx  nav-dark.tsx  nav-light.tsx  privy-login-button.tsx  privy-wallet-dashboard.tsx  providers.tsx  site-footer.tsx  wallet-context.tsx
docs/: DEMO_WALKTHROUGH.md
hooks/: use-privy-wallet.ts  usePivyWallet.ts
lib/: demo-data.ts  exchange-connections.ts  privy-config.ts  seed-data.ts  solana-donation.ts  solana-provider.tsx  solana-transactions.ts  solana-utils.ts  solana.ts  types.ts  wallet-encryption.ts
programs/donate_protocol/: Cargo.toml
programs/donate_protocol/src/: lib.rs
styles/: globals.css
(+65 files in other folders)
